--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/provider": "^2.0.0",
     "@ai-sdk/react": "2.0.59",
     "@ai-sdk/vercel": "1.0.20",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
     "@radix-ui/react-checkbox": "1.3.3",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-label": "2.1.7",
