--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "cmdk": "^1.1.1",
         "cookie": "^1.0.2",
         "date-fns": "^4.1.0",
+        "dexie": "^4.2.1",
         "embla-carousel-react": "^8.6.0",
         "input-otp": "^1.4.2",
         "jose": "6.0.12",
